--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Instagram_Clone</string>
+    <string name="display_name">Hung</string>
+    <string name="address">I live in HCM City, Viet Nam</string>
+    <string name="target">https://codingforfaang.com</string>
 </resources>
